/*
 * SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package onos.test.test;

import "gogoproto/gogo.proto";

// TestRequest is a test request
message TestRequest {
    // suite is the test suite to run
    string suite = 1;

    // tests are the tests to run
    repeated string tests = 2;

    // args is the test arguments
    map<string, string> args = 3;
}

// TestResponse is a test response
message TestResponse {

}

// WorkerService is a test worker service
service WorkerService {
    rpc RunTests (TestRequest) returns (TestResponse);
}
